force-app/main/default/objects/BusinessLicenseApplication/fields/Any_abuse_or_neglect_investigation__c.field-meta.xml
<CustomField>
    <fullName>Any_abuse_or_neglect_investigation__c</fullName>
    <label>Any abuse or neglect investigation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>