force-app/main/default/objects/BusinessLicenseApplication/fields/Any_convictions_for_abuse_or_neglect__c.field-meta.xml
<CustomField>
    <fullName>Any_convictions_for_abuse_or_neglect__c</fullName>
    <label>Any convictions for abuse or neglect?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>