force-app/main/default/objects/BusinessLicenseApplication/fields/Anyone_age_18_Living_at_Care_Location__c.field-meta.xml
<CustomField>
    <fullName>Anyone_age_18_Living_at_Care_Location__c</fullName>
    <inlineHelpText>Does anyone age 18 and older live in this location where care is being provided?</inlineHelpText>
    <label>Anyone age 18+ Living at Care Location?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>