force-app/main/default/objects/BusinessLicenseApplication/fields/AutoNumberTest__c.field-meta.xml
<CustomField>
    <fullName>AutoNumberTest__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Id, Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AutoNumberTest</label>
    <type>Text</type>
</CustomField>