force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Additional_Space_Req_Description__c.field-meta.xml
<CustomField>
    <fullName>CC_Additional_Space_Req_Description__c</fullName>
    <label>Additional Space Requirement Description</label>
    <type>TextArea</type>
</CustomField>