force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Allow_Administrative_Review__c.field-meta.xml
<CustomField>
    <fullName>CC_Allow_Administrative_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Administrative Review</label>
    <type>Checkbox</type>
</CustomField>