force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Allow_Administrative_Review_Until__c.field-meta.xml
<CustomField>
    <fullName>CC_Allow_Administrative_Review_Until__c</fullName>
    <label>Allow Administrative Review Until</label>
    <type>Date</type>
</CustomField>