force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Any_member_had_Restraining_Order__c.field-meta.xml
<CustomField>
    <fullName>CC_Any_member_had_Restraining_Order__c</fullName>
    <label>Any member had Restraining Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>