force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Applicant_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Applicant_Email_Address__c</fullName>
    <formula>Applicant.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Email Address</label>
    <type>Text</type>
</CustomField>