force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_Applicant_Name__c</fullName>
    <formula>Applicant.FirstName + &apos; &apos; + Applicant.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Name</label>
    <type>Text</type>
</CustomField>