force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Application_Under_Review_Age__c.field-meta.xml
<CustomField>
    <fullName>CC_Application_Under_Review_Age__c</fullName>
    <formula>TEXT(TODAY() - DATEVALUE(CC_Under_Review_Start_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Under Review Age</label>
    <type>Text</type>
</CustomField>