force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Applied_Or_Issued_Certificate_by_DEEC__c.field-meta.xml
<CustomField>
    <fullName>CC_Applied_Or_Issued_Certificate_by_DEEC__c</fullName>
    <label>Applied Or Issued Certificate by DEEC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>