force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Approved_Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_Approved_Facility_Name__c</fullName>
    <label>Approved Facility Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>