force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Approved_Foster_care_Provider__c.field-meta.xml
<CustomField>
    <fullName>CC_Approved_Foster_care_Provider__c</fullName>
    <label>Approved Foster care Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>