force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Are_children_s_immunizations_current__c.field-meta.xml
<CustomField>
    <fullName>CC_Are_children_s_immunizations_current__c</fullName>
    <inlineHelpText>Are children’s immunizations current?</inlineHelpText>
    <label>Are children’s immunizations current?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>