force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Arm_Rule__c.field-meta.xml
<CustomField>
    <fullName>CC_Arm_Rule__c</fullName>
    <label>CC Arm Rule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>