force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Arm_Rule_Request_Explanation__c.field-meta.xml
<CustomField>
    <fullName>CC_Arm_Rule_Request_Explanation__c</fullName>
    <label>CC Arm Rule Request Explanation</label>
    <type>TextArea</type>
</CustomField>