force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Building_Inspection_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Building_Inspection_Expiration_Date__c</fullName>
    <label>Building Inspection Expiration Date</label>
    <type>Date</type>
</CustomField>