force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Burning_Stoves_Description__c.field-meta.xml
<CustomField>
    <fullName>CC_Burning_Stoves_Description__c</fullName>
    <label>Burning Stoves Description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>