force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Business_operation_owner_Description__c.field-meta.xml
<CustomField>
    <fullName>CC_Business_operation_owner_Description__c</fullName>
    <label>Business operation owner Description</label>
    <type>TextArea</type>
</CustomField>