force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Camp_Permit_Number__c.field-meta.xml
<CustomField>
    <fullName>CC_Camp_Permit_Number__c</fullName>
    <label>Camp Permit Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>