force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Can_you_Communicate_in_English__c.field-meta.xml
<CustomField>
    <fullName>CC_Can_you_Communicate_in_English__c</fullName>
    <label>Can you Communicate in English</label>
    <length>15</length>
    <type>Text</type>
</CustomField>