force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Capacity_to_be_Granted__c.field-meta.xml
<CustomField>
    <fullName>CC_Capacity_to_be_Granted__c</fullName>
    <label>Capacity to be Granted</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>