force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Caring_For_Unrelated_Children__c.field-meta.xml
<CustomField>
    <fullName>CC_Caring_For_Unrelated_Children__c</fullName>
    <label>Caring For Unrelated Children</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>