force-app/main/default/objects/BusinessLicenseApplication/fields/CC_CCL_Technician__c.field-meta.xml
<CustomField>
    <fullName>CC_CCL_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Licensing Tech</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Business_License_Applications2_del</relationshipName>
    <type>Lookup</type>
</CustomField>