force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Contains_atleast_Two_Exits__c.field-meta.xml
<CustomField>
    <fullName>CC_Contains_atleast_Two_Exits__c</fullName>
    <label>Contains atleast Two Exits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>