force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Contract__c.field-meta.xml
<CustomField>
    <fullName>CC_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Business License Applications</relationshipLabel>
    <relationshipName>Business_License_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>