force-app/main/default/objects/BusinessLicenseApplication/fields/CC_County__c.field-meta.xml
<CustomField>
    <fullName>CC_County__c</fullName>
    <inlineHelpText>County of registered or certified child care provider</inlineHelpText>
    <label>County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>