force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Date_Completed_PPT_Part_1__c.field-meta.xml
<CustomField>
    <fullName>CC_Date_Completed_PPT_Part_1__c</fullName>
    <label>Date Completed PPT Part 1</label>
    <type>Date</type>
</CustomField>