force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Date_Completed_PPT_Part_2__c.field-meta.xml
<CustomField>
    <fullName>CC_Date_Completed_PPT_Part_2__c</fullName>
    <label>Date Completed PPT Part 2</label>
    <type>Date</type>
</CustomField>