force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Date_of_Change__c.field-meta.xml
<CustomField>
    <fullName>CC_Date_of_Change__c</fullName>
    <label>CC Date of Change</label>
    <type>Date</type>
</CustomField>