force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Denial_Reason_Category__c.field-meta.xml
<CustomField>
    <fullName>CC_Denial_Reason_Category__c</fullName>
    <label>Denial Reason Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Background Check Qualification Failed</fullName>
            </value>
            <value>
                <fullName>Training Qualification Unmet</fullName>
            </value>
            <value>
                <fullName>Application Incomplete</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>