force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Denial_Reason_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>CC_Denial_Reason_Sub_Category__c</fullName>
    <label>Denial Reason Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CC_Denial_Reason_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPS</fullName>
            </value>
            <value>
                <fullName>Criminal</fullName>
            </value>
            <value>
                <fullName>FBI</fullName>
            </value>
            <value>
                <fullName>WIN</fullName>
            </value>
            <value>
                <fullName>SVOR</fullName>
            </value>
            <value>
                <fullName>NSVOR</fullName>
            </value>
            <value>
                <fullName>Currently on Trail</fullName>
            </value>
            <value>
                <fullName>Pending Charges</fullName>
            </value>
            <value>
                <fullName>CPR</fullName>
            </value>
            <value>
                <fullName>FA</fullName>
            </value>
            <value>
                <fullName>Orientation</fullName>
            </value>
            <value>
                <fullName>No Liability Insurance</fullName>
            </value>
            <value>
                <fullName>No Fire Insurance</fullName>
            </value>
            <value>
                <fullName>No Fire Inspection</fullName>
            </value>
            <value>
                <fullName>No Health Inspection</fullName>
            </value>
            <value>
                <fullName>No Facility Location</fullName>
            </value>
            <value>
                <fullName>Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>