force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Director_Name_Old__c.field-meta.xml
<CustomField>
    <fullName>CC_Director_Name_Old__c</fullName>
    <label>CC Director Name Old</label>
    <length>80</length>
    <type>Text</type>
</CustomField>