force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Do_have_Health_Department_Certificate__c.field-meta.xml
<CustomField>
    <fullName>CC_Do_have_Health_Department_Certificate__c</fullName>
    <inlineHelpText>Do you have Health Department Certification?</inlineHelpText>
    <label>Do have Health Department Certification?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>