force-app/main/default/objects/BusinessLicenseApplication/fields/CC_DPH_Summer_Camp_License__c.field-meta.xml
<CustomField>
    <fullName>CC_DPH_Summer_Camp_License__c</fullName>
    <label>DPH Summer Camp License</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>