force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Environment_foster_trust_happiness__c.field-meta.xml
<CustomField>
    <fullName>CC_Environment_foster_trust_happiness__c</fullName>
    <inlineHelpText>Does the emotional climate foster happiness and trust?</inlineHelpText>
    <label>Environment foster trust &amp; happiness?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>