force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Eve_Overnight_Weekend_Care_Desc__c.field-meta.xml
<CustomField>
    <fullName>CC_Eve_Overnight_Weekend_Care_Desc__c</fullName>
    <label>Eve Overnight Weekend Care Description</label>
    <type>TextArea</type>
</CustomField>