force-app/main/default/objects/BusinessLicenseApplication/fields/CC_Ever_held_any_other_MTX_Licenses__c.field-meta.xml
<CustomField>
    <fullName>CC_Ever_held_any_other_MTX_Licenses__c</fullName>
    <label>Ever held any other MTX Licenses</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>